Add support for calc() to the 'min-width' and 'max-width' properties.  (Bug 585715)  r=bzbarsky  a2.0=blocking+
UltraBlame original commit: 4cc74816505e650952796f6e462a82beed02d036

--- a/layout/reftests/css-calc/max-width-block-1.html
+++ b/layout/reftests/css-calc/max-width-block-1.html
@@ -6,13 +6,7 @@ HTML
 <
 title
 >
-width
-:
-calc
-(
-)
-and
-min
+max
 -
 width
 :
@@ -54,6 +48,11 @@ font
 size
 :
 10px
+;
+width
+:
+1000px
+;
 }
 <
 /
@@ -64,9 +63,20 @@ p
 style
 =
 "
+max
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+50
+%
+-
+3px
+)
 "
 >
 50
@@ -82,9 +92,23 @@ p
 style
 =
 "
+max
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+25
+%
+-
+3px
++
+25
+%
+)
 "
 >
 25
@@ -103,9 +127,27 @@ p
 style
 =
 "
+max
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+25
+%
+-
+3px
++
+12
+.
+5
+%
+*
+2
+)
 "
 >
 25
@@ -128,9 +170,27 @@ p
 style
 =
 "
+max
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+25
+%
+-
+3px
++
+12
+.
+5
+%
+*
+2
+)
 "
 >
 25
@@ -153,9 +213,27 @@ p
 style
 =
 "
+max
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+25
+%
+-
+3px
++
+2
+*
+12
+.
+5
+%
+)
 "
 >
 25
@@ -178,9 +256,27 @@ p
 style
 =
 "
+max
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+25
+%
+-
+3px
++
+2
+*
+12
+.
+5
+%
+)
 "
 >
 25
@@ -203,9 +299,19 @@ p
 style
 =
 "
+max
+-
 width
 :
-125px
+-
+moz
+-
+min
+(
+25
+%
+150px
+)
 "
 >
 min
@@ -223,9 +329,22 @@ p
 style
 =
 "
+max
+-
 width
 :
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
 100px
+)
+)
 "
 >
 min
@@ -243,9 +362,22 @@ p
 style
 =
 "
+max
+-
 width
 :
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
 150px
+)
+)
 "
 >
 max
@@ -263,9 +395,19 @@ p
 style
 =
 "
+max
+-
 width
 :
-125px
+-
+moz
+-
+max
+(
+25
+%
+100px
+)
 "
 >
 max
@@ -283,9 +425,25 @@ p
 style
 =
 "
+max
+-
 width
 :
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
 150px
+)
++
+5
+%
+)
 "
 >
 min
@@ -306,9 +464,25 @@ p
 style
 =
 "
+max
+-
 width
 :
-125px
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
+100px
+)
++
+5
+%
+)
 "
 >
 min
@@ -329,9 +503,25 @@ p
 style
 =
 "
+max
+-
 width
 :
-175px
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
+150px
+)
++
+5
+%
+)
 "
 >
 max
@@ -352,9 +542,25 @@ p
 style
 =
 "
+max
+-
 width
 :
-150px
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
+100px
+)
++
+5
+%
+)
 "
 >
 max
@@ -375,9 +581,24 @@ p
 style
 =
 "
+max
+-
 width
 :
-105px
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
+150px
+)
+-
+2em
+)
 "
 >
 min
@@ -397,9 +618,24 @@ p
 style
 =
 "
+max
+-
 width
 :
-80px
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
+100px
+)
+-
+2em
+)
 "
 >
 min
@@ -419,9 +655,24 @@ p
 style
 =
 "
+max
+-
 width
 :
-130px
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
+150px
+)
+-
+2em
+)
 "
 >
 max
@@ -441,9 +692,24 @@ p
 style
 =
 "
+max
+-
 width
 :
-105px
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
+100px
+)
+-
+2em
+)
 "
 >
 max
@@ -463,9 +729,21 @@ p
 style
 =
 "
+max
+-
 width
 :
-250px
+-
+moz
+-
+calc
+(
+30
+%
++
+20
+%
+)
 "
 >
 30
@@ -482,9 +760,25 @@ p
 style
 =
 "
+max
+-
 width
 :
-250px
+-
+moz
+-
+calc
+(
+30
+%
++
+max
+(
+20
+%
+1px
+)
+)
 "
 >
 30
@@ -505,9 +799,23 @@ p
 style
 =
 "
+max
+-
 width
 :
-250px
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
+50
+%
+)
+)
 "
 >
 max
@@ -526,9 +834,23 @@ p
 style
 =
 "
+max
+-
 width
 :
-125px
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
+50
+%
+)
+)
 "
 >
 max
