--- a/layout/reftests/css-calc/min-width-block-1.html
+++ b/layout/reftests/css-calc/min-width-block-1.html
@@ -6,12 +6,6 @@ HTML
 <
 title
 >
-width
-:
-calc
-(
-)
-and
 min
 -
 width
@@ -54,6 +48,10 @@ font
 size
 :
 10px
+;
+width
+:
+0
 }
 <
 /
@@ -64,9 +62,20 @@ p
 style
 =
 "
+min
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+50
+%
+-
+3px
+)
 "
 >
 50
@@ -82,9 +91,23 @@ p
 style
 =
 "
+min
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+25
+%
+-
+3px
++
+25
+%
+)
 "
 >
 25
@@ -103,9 +126,27 @@ p
 style
 =
 "
+min
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+25
+%
+-
+3px
++
+12
+.
+5
+%
+*
+2
+)
 "
 >
 25
@@ -128,9 +169,27 @@ p
 style
 =
 "
+min
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+25
+%
+-
+3px
++
+12
+.
+5
+%
+*
+2
+)
 "
 >
 25
@@ -153,9 +212,27 @@ p
 style
 =
 "
+min
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+25
+%
+-
+3px
++
+2
+*
+12
+.
+5
+%
+)
 "
 >
 25
@@ -178,9 +255,27 @@ p
 style
 =
 "
+min
+-
 width
 :
-247px
+-
+moz
+-
+calc
+(
+25
+%
+-
+3px
++
+2
+*
+12
+.
+5
+%
+)
 "
 >
 25
@@ -203,9 +298,19 @@ p
 style
 =
 "
+min
+-
 width
 :
-125px
+-
+moz
+-
+min
+(
+25
+%
+150px
+)
 "
 >
 min
@@ -223,9 +328,22 @@ p
 style
 =
 "
+min
+-
 width
 :
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
 100px
+)
+)
 "
 >
 min
@@ -243,9 +361,22 @@ p
 style
 =
 "
+min
+-
 width
 :
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
 150px
+)
+)
 "
 >
 max
@@ -263,9 +394,19 @@ p
 style
 =
 "
+min
+-
 width
 :
-125px
+-
+moz
+-
+max
+(
+25
+%
+100px
+)
 "
 >
 max
@@ -283,9 +424,25 @@ p
 style
 =
 "
+min
+-
 width
 :
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
 150px
+)
++
+5
+%
+)
 "
 >
 min
@@ -306,9 +463,25 @@ p
 style
 =
 "
+min
+-
 width
 :
-125px
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
+100px
+)
++
+5
+%
+)
 "
 >
 min
@@ -329,9 +502,25 @@ p
 style
 =
 "
+min
+-
 width
 :
-175px
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
+150px
+)
++
+5
+%
+)
 "
 >
 max
@@ -352,9 +541,25 @@ p
 style
 =
 "
+min
+-
 width
 :
-150px
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
+100px
+)
++
+5
+%
+)
 "
 >
 max
@@ -375,9 +580,24 @@ p
 style
 =
 "
+min
+-
 width
 :
-105px
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
+150px
+)
+-
+2em
+)
 "
 >
 min
@@ -397,9 +617,24 @@ p
 style
 =
 "
+min
+-
 width
 :
-80px
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
+100px
+)
+-
+2em
+)
 "
 >
 min
@@ -419,9 +654,24 @@ p
 style
 =
 "
+min
+-
 width
 :
-130px
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
+150px
+)
+-
+2em
+)
 "
 >
 max
@@ -441,9 +691,24 @@ p
 style
 =
 "
+min
+-
 width
 :
-105px
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
+100px
+)
+-
+2em
+)
 "
 >
 max
@@ -463,9 +728,21 @@ p
 style
 =
 "
+min
+-
 width
 :
-250px
+-
+moz
+-
+calc
+(
+30
+%
++
+20
+%
+)
 "
 >
 30
@@ -482,9 +759,25 @@ p
 style
 =
 "
+min
+-
 width
 :
-250px
+-
+moz
+-
+calc
+(
+30
+%
++
+max
+(
+20
+%
+1px
+)
+)
 "
 >
 30
@@ -505,9 +798,23 @@ p
 style
 =
 "
+min
+-
 width
 :
-250px
+-
+moz
+-
+calc
+(
+max
+(
+25
+%
+50
+%
+)
+)
 "
 >
 max
@@ -526,9 +833,23 @@ p
 style
 =
 "
+min
+-
 width
 :
-125px
+-
+moz
+-
+calc
+(
+min
+(
+25
+%
+50
+%
+)
+)
 "
 >
 max
