Bug 588473 - Fix excessive tab height on Windows 7. r=mano
UltraBlame original commit: fe75089fbd26f8bc8f13244e4c46ddef96b0b828

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -3225,6 +3225,15 @@ style
 :
 none
 ;
+-
+moz
+-
+appearance
+:
+none
+!
+important
+;
 }
 .
 toolbarbutton
@@ -4236,10 +4245,23 @@ appearance
 :
 toolbarbutton
 ;
+%
+ifdef
+WINSTRIPE_AERO
+margin
+:
+-
+1px
+0
+;
+%
+else
 margin
 :
 0
 ;
+%
+endif
 padding
 :
 0
@@ -4283,6 +4305,41 @@ none
 important
 ;
 }
+%
+ifdef
+WINSTRIPE_AERO
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+{
+margin
+:
+0
+!
+important
+;
+}
+%
+endif
 #
 TabsToolbar
 >
@@ -10250,10 +10307,23 @@ rect
 0
 )
 ;
+%
+ifdef
+WINSTRIPE_AERO
+margin
+:
+-
+1px
+0
+;
+%
+else
 margin
 :
 0
 ;
+%
+endif
 padding
 -
 top
