Bug 590873 - Border between tabs and navigation toolbar needs to be part of the navigation toolbar. r=gavin
UltraBlame original commit: d052c765cc04ecac3978d4f0c50e48c0d7689728

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -507,6 +507,127 @@ toolbarHighlight
 ;
 }
 #
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+>
+#
+nav
+-
+bar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+#
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+:
+not
+(
+[
+customizing
+]
+)
+>
+#
+nav
+-
+bar
+[
+collapsed
+=
+"
+true
+"
+]
++
+toolbar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+#
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+:
+not
+(
+[
+customizing
+]
+)
+>
+#
+nav
+-
+bar
+[
+collapsed
+=
+"
+true
+"
+]
++
+#
+customToolbars
++
+#
+PersonalToolbar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+{
+border
+-
+top
+:
+1px
+solid
+ThreeDShadow
+;
+}
+#
 personal
 -
 bookmarks
@@ -8674,9 +8795,69 @@ rgba
 ;
 }
 #
-TabsToolbar
+tabbrowser
+-
+tabs
 [
 tabsontop
+=
+"
+true
+"
+]
+>
+.
+tabbrowser
+-
+arrowscrollbox
+>
+scrollbox
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+{
+padding
+-
+bottom
+:
+1px
+;
+margin
+-
+bottom
+:
+-
+1px
+;
+position
+:
+relative
+;
+}
+#
+tabbrowser
+-
+tabs
+[
+tabsontop
+=
+"
+true
+"
+]
+>
+.
+tabbrowser
+-
+tab
+[
+selected
 =
 "
 true
@@ -8692,18 +8873,18 @@ moz
 lwtheme
 )
 {
+margin
 -
-moz
--
-box
--
-shadow
+bottom
 :
-0
 -
 1px
-ThreeDShadow
-inset
+;
+padding
+-
+bottom
+:
+1px
 ;
 }
 .
