Tests for Bug 36619 r=sicking a=blocking
UltraBlame original commit: a8328013a77313de8bf058463cc2d8ddbe63139c

--- a/layout/forms/test/bug536567_subframe.html
+++ b/layout/forms/test/bug536567_subframe.html
@@ -250,6 +250,19 @@ file
 (
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
 var
 f
 =
@@ -314,6 +327,19 @@ MFP_show
 (
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
 if
 (
 this
@@ -348,6 +374,12 @@ postMessage
 "
 *
 "
+)
+;
+mockFilePickerRegisterer
+.
+unregister
+(
 )
 ;
 return
@@ -504,12 +536,6 @@ e
 }
 finally
 {
-mockFilePickerRegisterer
-.
-unregister
-(
-)
-;
 }
 }
 window
