--- a/layout/forms/test/test_bug36619.html
+++ b/layout/forms/test/test_bug36619.html
@@ -15,7 +15,7 @@ title
 Test
 for
 Bug
-500885
+36619
 <
 /
 title
@@ -25,7 +25,7 @@ script
 type
 =
 "
-text
+application
 /
 javascript
 "
@@ -49,7 +49,7 @@ script
 type
 =
 "
-text
+application
 /
 javascript
 "
@@ -75,7 +75,7 @@ script
 type
 =
 "
-text
+application
 /
 javascript
 "
@@ -130,6 +130,14 @@ head
 >
 <
 body
+onload
+=
+"
+runTests
+(
+)
+;
+"
 >
 <
 a
@@ -157,47 +165,87 @@ cgi
 ?
 id
 =
-500885
+36619
 "
 >
 Mozilla
 Bug
-500885
+36619
 <
 /
 a
 >
 <
+p
+id
+=
+"
+display
+"
+>
+<
+/
+p
+>
+<
 div
+id
+=
+"
+content
+"
 >
 <
 input
 id
 =
-"
-file
-"
+'
+a
+'
 type
 =
-"
+'
 file
-"
-/
+'
 >
 <
 /
 div
+>
+<
+pre
+id
+=
+"
+test
+"
 >
 <
 script
 type
 =
 "
-text
+application
 /
 javascript
 "
 >
+/
+*
+*
+Test
+for
+Bug
+36619
+*
+*
+/
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
 netscape
 .
 security
@@ -206,9 +254,9 @@ PrivilegeManager
 .
 enablePrivilege
 (
-"
+'
 UniversalXPConnect
-"
+'
 )
 ;
 const
@@ -226,18 +274,25 @@ Components
 interfaces
 ;
 const
-Cu
-=
-Components
-.
-utils
-;
-const
 Cm
 =
 Components
 .
 manager
+.
+QueryInterface
+(
+Ci
+.
+nsIComponentRegistrar
+)
+;
+const
+Cu
+=
+Components
+.
+utils
 ;
 Cc
 [
@@ -318,7 +373,6 @@ MockFilePicker
 )
 {
 }
-;
 MockFilePicker
 .
 prototype
@@ -336,13 +390,65 @@ Ci
 nsIFilePicker
 ]
 )
-init
+/
+/
+properties
+defaultExtension
+:
+"
+"
+defaultString
+:
+"
+"
+get
+displayDirectory
+(
+)
+{
+return
+null
+;
+}
+set
+displayDirectory
+(
+val
+)
+{
+}
+file
+:
+null
+get
+files
+(
+)
+{
+return
+null
+;
+}
+get
+fileURL
+(
+)
+{
+return
+null
+;
+}
+filterIndex
+:
+0
+/
+/
+methods
+appendFilter
 :
 function
 (
-aParent
-aTitle
-aMode
+val
 )
 {
 }
@@ -350,71 +456,26 @@ appendFilters
 :
 function
 (
-aFilterMask
+val
 )
 {
 }
-appendFilter
+init
 :
 function
 (
-aTitle
-aFilter
 )
 {
-}
-defaultString
-:
-"
-"
-defaultExtension
-:
-"
-"
-filterIndex
-:
-0
-displayDirectory
-:
-null
-file
-:
-null
-get
-fileURL
-(
-)
-{
-throw
-Cr
-.
-NS_ERROR_NOT_IMPLEMENTED
-;
-}
-get
-files
-(
-)
-{
-throw
-Cr
-.
-NS_ERROR_NOT_IMPLEMENTED
-;
 }
 show
 :
 function
-MFP_show
 (
 )
 {
-return
-Ci
-.
-nsIFilePicker
-.
-returnOK
+shown
+=
+true
 ;
 }
 }
@@ -437,8 +498,107 @@ filepicker
 MockFilePicker
 )
 ;
+mockFilePickerRegisterer
+.
+register
+(
+)
+;
+/
+/
+enable
+popups
+the
+first
+time
+var
+pbi
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+preferences
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIPrefBranch2
+)
+;
+var
+oldAllow
+=
+pbi
+.
+getBoolPref
+(
+"
+dom
+.
+disable_open_during_load
+"
+)
+;
+var
+oldShowBar
+=
+pbi
+.
+getBoolPref
+(
+"
+privacy
+.
+popups
+.
+showBrowserMessage
+"
+)
+;
+pbi
+.
+setBoolPref
+(
+"
+dom
+.
+disable_open_during_load
+"
+true
+)
+;
+pbi
+.
+setBoolPref
+(
+"
+privacy
+.
+popups
+.
+showBrowserMessage
+"
+false
+)
+;
+var
+shown
+=
+false
+;
 function
-test
+checkFirst
 (
 )
 {
@@ -450,233 +610,115 @@ PrivilegeManager
 .
 enablePrivilege
 (
-"
+'
 UniversalXPConnect
+'
+)
+;
+ok
+(
+shown
+"
+File
+picker
+show
+method
+should
+have
+been
+called
 "
 )
 ;
-var
-wu
+shown
 =
-window
-.
-QueryInterface
-(
-Ci
-.
-nsIInterfaceRequestor
-)
-.
-getInterface
-(
-Ci
-.
-nsIDOMWindowUtils
-)
+false
 ;
-mockFilePickerRegisterer
-.
-register
-(
-)
-;
-try
-{
-var
-domActivateEvents
-;
-var
-fileInput
-=
 document
 .
 getElementById
 (
 "
-file
+a
 "
 )
-;
-var
-rect
-=
-fileInput
 .
-getBoundingClientRect
-(
-)
-;
-fileInput
-.
-addEventListener
-(
-"
-DOMActivate
-"
-function
-(
-)
-{
-domActivateEvents
-+
-+
-;
-}
-false
-)
-;
-domActivateEvents
-=
-0
-;
-wu
-.
-sendMouseEvent
-(
-"
-mousedown
-"
-rect
-.
-left
-+
-5
-rect
-.
-top
-+
-5
-0
-1
-0
-)
-;
-wu
-.
-sendMouseEvent
-(
-"
-mouseup
-"
-rect
-.
-left
-+
-5
-rect
-.
-top
-+
-5
-0
-1
-0
-)
-;
-is
-(
-domActivateEvents
-1
-"
 click
-on
-text
-field
-should
-only
-fire
-1
-DOMActivate
-event
-"
-)
-;
-domActivateEvents
-=
-0
-;
-wu
-.
-sendMouseEvent
 (
-"
-mousedown
-"
-rect
-.
-right
--
-5
-rect
-.
-top
-+
-5
-0
-1
-0
 )
 ;
-wu
-.
-sendMouseEvent
+setTimeout
 (
-"
-mouseup
-"
-rect
-.
-right
--
-5
-rect
-.
-top
-+
-5
-0
-1
-0
+finishTest
+1000
 )
 ;
-is
-(
-domActivateEvents
-1
-"
-click
-on
-button
-should
-only
-fire
-1
-DOMActivate
-event
-"
-)
-;
-}
-finally
-{
-SimpleTest
-.
-executeSoon
-(
-unregister
-)
-;
-}
 }
 function
-unregister
+finishTest
 (
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+ok
+(
+!
+shown
+"
+File
+picker
+show
+method
+should
+not
+have
+been
+called
+"
+)
+;
 mockFilePickerRegisterer
 .
 unregister
 (
+)
+;
+pbi
+.
+setBoolPref
+(
+"
+dom
+.
+disable_open_during_load
+"
+oldAllow
+)
+;
+pbi
+.
+setBoolPref
+(
+"
+privacy
+.
+popups
+.
+showBrowserMessage
+"
+oldShowBar
 )
 ;
 SimpleTest
@@ -686,31 +728,39 @@ finish
 )
 ;
 }
-window
-.
-onload
-=
 function
+runTests
 (
 )
 {
-SimpleTest
+document
 .
-waitForExplicitFinish
+getElementById
+(
+"
+a
+"
+)
+.
+click
 (
 )
 ;
-setTimeout
+SimpleTest
+.
+executeSoon
 (
-test
-0
+checkFirst
 )
 ;
 }
-;
 <
 /
 script
+>
+<
+/
+pre
 >
 <
 /
