b=590468 use window background color for browser-bottombox to make it opaque r=dao
UltraBlame original commit: 28bf7628f0f1cfe75c9dfa32b9847c40e9683327

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -162,6 +162,32 @@ top
 ;
 }
 #
+browser
+-
+bottombox
+:
+not
+(
+[
+lwthemefooter
+=
+"
+true
+"
+]
+)
+{
+background
+-
+color
+:
+-
+moz
+-
+Dialog
+;
+}
+#
 urlbar
 :
 -
