--- a/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
@@ -1,3 +1,16 @@
+%
+include
+.
+.
+/
+.
+.
+/
+global
+/
+shared
+.
+inc
 #
 addons
 -
@@ -48,6 +61,333 @@ border
 radius
 :
 5px
+;
+}
+.
+nav
+-
+button
+{
+-
+moz
+-
+appearance
+:
+none
+;
+min
+-
+width
+:
+0
+;
+padding
+:
+0
+4px
+;
+margin
+:
+0
+;
+text
+-
+shadow
+:
+loweredShadow
+;
+border
+:
+1px
+solid
+toolbarbuttonBorderColor
+;
+-
+moz
+-
+box
+-
+shadow
+:
+loweredShadow
+;
+background
+:
+toolbarbuttonBackground
+;
+background
+-
+origin
+:
+border
+-
+box
+;
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+extensions
+/
+navigation
+.
+png
+)
+;
+}
+.
+nav
+-
+button
+.
+button
+-
+text
+{
+display
+:
+none
+;
+}
+.
+nav
+-
+button
+[
+disabled
+=
+"
+true
+"
+]
+.
+button
+-
+icon
+{
+opacity
+:
+0
+.
+4
+;
+}
+#
+back
+-
+btn
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+#
+forward
+-
+btn
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+-
+moz
+-
+border
+-
+radius
+-
+topleft
+:
+toolbarbuttonCornerRadius
+;
+-
+moz
+-
+border
+-
+radius
+-
+bottomleft
+:
+toolbarbuttonCornerRadius
+;
+border
+-
+right
+:
+none
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+20px
+20px
+0
+)
+;
+}
+#
+back
+-
+btn
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+forward
+-
+btn
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+{
+-
+moz
+-
+border
+-
+radius
+-
+topright
+:
+toolbarbuttonCornerRadius
+;
+-
+moz
+-
+border
+-
+radius
+-
+bottomright
+:
+toolbarbuttonCornerRadius
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+40px
+20px
+20px
+)
+;
+}
+.
+nav
+-
+button
+:
+hover
+:
+active
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+{
+background
+:
+toolbarbuttonPressedBackgroundColor
+;
+text
+-
+shadow
+:
+loweredShadow
+;
+-
+moz
+-
+box
+-
+shadow
+:
+toolbarbuttonPressedInnerShadow
+loweredShadow
+;
+}
+.
+nav
+-
+button
+:
+-
+moz
+-
+window
+-
+inactive
+{
+border
+-
+color
+:
+toolbarbuttonInactiveBorderColor
+;
+background
+-
+image
+:
+toolbarbuttonInactiveBackgroundImage
 ;
 }
 #
@@ -775,10 +1115,6 @@ margin
 bottom
 :
 20px
-;
-height
-:
-2em
 ;
 }
 #
