Bug 587576 - Make pinned tabs wider. r=gavin a=blocks-bug579373
UltraBlame original commit: 4496d883d11333f8f149cc6a86ff44791de9369e

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -9984,18 +9984,23 @@ rect
 0px
 )
 ;
+-
+moz
+-
+margin
+-
+end
+:
+3px
+;
 }
 .
 tabbrowser
 -
 tab
-:
-not
-(
 [
 pinned
 ]
-)
 >
 .
 tab
@@ -10009,9 +10014,18 @@ moz
 -
 margin
 -
+start
+:
+2px
+;
+-
+moz
+-
+margin
+-
 end
 :
-3px
+2px
 ;
 }
 .
