--- a/toolkit/components/console/hudservice/NetworkPanel.xhtml
+++ b/toolkit/components/console/hudservice/NetworkPanel.xhtml
@@ -1082,6 +1082,76 @@ div
 id
 =
 "
+responseBodyCached
+"
+style
+=
+"
+display
+:
+none
+"
+>
+<
+h1
+>
+&
+networkPanel
+.
+responseBodyCached
+;
+<
+span
+class
+=
+"
+info
+"
+id
+=
+"
+responseBodyCachedInfo
+"
+>
+&
+Delta
+;
+<
+/
+span
+>
+<
+/
+h1
+>
+<
+div
+class
+=
+"
+property
+-
+header
+"
+id
+=
+"
+responseBodyCachedContent
+"
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
 responseNoBody
 "
 style
