--- a/toolkit/components/console/hudservice/NetworkPanel.xhtml
+++ b/toolkit/components/console/hudservice/NetworkPanel.xhtml
@@ -883,6 +883,56 @@ div
 div
 >
 <
+div
+id
+=
+"
+requestFormData
+"
+style
+=
+"
+display
+:
+none
+"
+>
+<
+h1
+>
+&
+networkPanel
+.
+requestFormData
+;
+<
+/
+h1
+>
+<
+div
+class
+=
+"
+property
+-
+header
+"
+id
+=
+"
+requestFormDataContent
+"
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
 /
 div
 >
