Bug 587215 - Sync UI: Error notifications aren't displayed r=dolske a=blocking2.0
UltraBlame original commit: fb26f9cb32623b3a07092762ca2f4a262e1d9c5e

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1764,6 +1764,76 @@ width
 1px
 ;
 }
+%
+ifdef
+MOZ_SERVICES_SYNC
+#
+sync
+-
+notifications
+-
+box
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+syncNotification
+.
+xml
+#
+notificationbox
+"
+)
+;
+}
+#
+sync
+-
+notifications
+-
+box
+notification
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+syncNotification
+.
+xml
+#
+notification
+"
+)
+;
+}
+%
+endif
 #
 identity
 -
