Bug 579683 - App tabs draw into the toolbar below or the content area. r=gavin a=blocking
UltraBlame original commit: bd0760227fc886d445c8128db31b61a80bfe76da

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -540,6 +540,28 @@ display
 none
 ;
 }
+.
+tabbrowser
+-
+tab
+[
+pinned
+]
+>
+.
+tab
+-
+icon
+-
+image
+{
+vertical
+-
+align
+:
+middle
+;
+}
 #
 alltabs
 -
