--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -10001,6 +10001,21 @@ tab
 [
 pinned
 ]
+{
+min
+-
+height
+:
+16px
+;
+}
+.
+tabbrowser
+-
+tab
+[
+pinned
+]
 >
 .
 tab
@@ -10044,6 +10059,13 @@ border
 dotted
 transparent
 ;
+margin
+:
+-
+1px
+!
+important
+;
 }
 .
 tabbrowser
@@ -10065,6 +10087,29 @@ dotted
 moz
 -
 DialogText
+;
+}
+.
+tabbrowser
+-
+tab
+[
+pinned
+]
+:
+focus
+>
+.
+tab
+-
+icon
+-
+image
+{
+outline
+:
+1px
+dotted
 ;
 }
 .
