Fix uses of percentage border-radius in themes for new definition of percent.  (Bug 471643)  r=Mossop  a2.0=blocking+
UltraBlame original commit: 72b14a58afc05b8b2074e1ebdce15140b8fedfce

--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -801,8 +801,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 color
 :
@@ -1674,8 +1673,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 padding
 :
@@ -3842,8 +3840,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 border
 :
@@ -4014,12 +4011,10 @@ border
 -
 radius
 :
-100
-%
+10000px
 0
 0
-100
-%
+10000px
 ;
 }
 .
@@ -4067,10 +4062,8 @@ border
 radius
 :
 0
-100
-%
-100
-%
+10000px
+10000px
 0
 ;
 }
@@ -4190,8 +4183,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 min
 -
@@ -4517,8 +4509,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 background
 -
