--- a/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
@@ -704,8 +704,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 color
 :
@@ -1577,8 +1576,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 padding
 :
@@ -2949,8 +2947,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 }
 .
@@ -3791,8 +3788,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 border
 :
@@ -3963,12 +3959,10 @@ border
 -
 radius
 :
-100
-%
+10000px
 0
 0
-100
-%
+10000px
 ;
 }
 .
@@ -4016,10 +4010,8 @@ border
 radius
 :
 0
-100
-%
-100
-%
+10000px
+10000px
 0
 ;
 }
@@ -4139,8 +4131,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 min
 -
@@ -4341,8 +4332,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 background
 -
@@ -4658,8 +4648,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 background
 -
