--- a/toolkit/themes/winstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/winstripe/mozapps/extensions/extensions.css
@@ -498,8 +498,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 color
 :
@@ -1371,8 +1370,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 padding
 :
@@ -2743,8 +2741,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 }
 .
@@ -3587,8 +3584,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 border
 :
@@ -3759,12 +3755,10 @@ border
 -
 radius
 :
-100
-%
+10000px
 0
 0
-100
-%
+10000px
 ;
 }
 .
@@ -3812,10 +3806,8 @@ border
 radius
 :
 0
-100
-%
-100
-%
+10000px
+10000px
 0
 ;
 }
@@ -3935,8 +3927,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 min
 -
@@ -4357,8 +4348,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 background
 -
