--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -1285,8 +1285,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 padding
 :
@@ -3842,8 +3841,7 @@ border
 -
 radius
 :
-100
-%
+10000px
 ;
 }
 toolbar
