Bug 571662 - Toolbar background should be darker. r=gavin
UltraBlame original commit: 6ce9c793cda35c49b3a7002a5439079ca5256132

--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -12,11 +12,13 @@ WINSTRIPE_AERO
 %
 define
 customToolbarColor
-rgb
+hsl
 (
-227
-237
-246
+214
+44
+%
+87
+%
 )
 media
 all
@@ -87,14 +89,7 @@ linear
 -
 gradient
 (
-rgba
-(
-255
-255
-255
-.
-7
-)
+white
 toolbarHighlight
 30
 %
