Bug 591310 - "Phrase not found" find bar status message is misaligned. r=mventnor
UltraBlame original commit: d0eec00d977c98a5b1dc8d57e2ee0a4443867068

--- a/toolkit/themes/gnomestripe/global/findBar.css
+++ b/toolkit/themes/gnomestripe/global/findBar.css
@@ -281,12 +281,16 @@ margin
 top
 :
 0
+!
+important
 ;
 margin
 -
 bottom
 :
 0
+!
+important
 ;
 -
 moz
@@ -296,6 +300,8 @@ margin
 start
 :
 3px
+!
+important
 ;
 -
 moz
@@ -305,10 +311,14 @@ margin
 end
 :
 0
+!
+important
 ;
 padding
 :
 2px
+!
+important
 ;
 }
 .
