--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -4363,8 +4363,16 @@ WINSTRIPE_AERO
 margin
 :
 -
-1px
+2px
 0
+-
+1px
+;
+padding
+-
+top
+:
+1px
 ;
 %
 else
@@ -4372,11 +4380,30 @@ margin
 :
 0
 ;
+padding
+-
+top
+:
+0
+;
 %
 endif
 padding
+-
+bottom
 :
 0
+;
+padding
+-
+left
+:
+3px
+;
+padding
+-
+right
+:
 3px
 ;
 border
@@ -10543,8 +10570,16 @@ WINSTRIPE_AERO
 margin
 :
 -
-1px
+2px
 0
+-
+1px
+;
+padding
+-
+top
+:
+1px
 ;
 %
 else
@@ -10552,14 +10587,14 @@ margin
 :
 0
 ;
-%
-endif
 padding
 -
 top
 :
 0
 ;
+%
+endif
 padding
 -
 bottom
