Bug 591626 - :-moz-placeholder is now implemented, uncomment corresponding theme code. r=dao
UltraBlame original commit: 55f521e7639b28effe6a136e90aa0880aa94ef4a

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -9085,6 +9085,44 @@ inherit
 }
 #
 editBMPanel_tagsField
+>
+.
+autocomplete
+-
+textbox
+-
+container
+>
+.
+textbox
+-
+input
+-
+box
+>
+html
+|
+*
+.
+textbox
+-
+input
+:
+-
+moz
+-
+placeholder
+{
+color
+:
+#
+bbb
+!
+important
+;
+}
+#
+editBMPanel_tagsField
 [
 focused
 =
