--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -6654,6 +6654,83 @@ urlbar
 moz
 -
 lwtheme
+>
+.
+autocomplete
+-
+textbox
+-
+container
+>
+.
+textbox
+-
+input
+-
+box
+>
+html
+|
+*
+.
+textbox
+-
+input
+:
+-
+moz
+-
+placeholder
+.
+searchbar
+-
+textbox
+:
+-
+moz
+-
+lwtheme
+>
+.
+autocomplete
+-
+textbox
+-
+container
+>
+.
+textbox
+-
+input
+-
+box
+>
+html
+|
+*
+.
+textbox
+-
+input
+:
+-
+moz
+-
+placeholder
+{
+color
+:
+#
+777
+;
+}
+#
+urlbar
+:
+-
+moz
+-
+lwtheme
 [
 focused
 =
