--- a/layout/reftests/editor/xul/input.css
+++ b/layout/reftests/editor/xul/input.css
@@ -249,6 +249,33 @@ html
 |
 input
 .
+empty
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+default
+-
+theme
+)
+{
+font
+-
+style
+:
+italic
+;
+}
+html
+|
+input
+.
 num
 {
 text
