--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -610,6 +610,73 @@ black
 }
 #
 urlbar
+>
+.
+autocomplete
+-
+textbox
+-
+container
+>
+.
+textbox
+-
+input
+-
+box
+>
+html
+|
+*
+.
+textbox
+-
+input
+:
+-
+moz
+-
+placeholder
+.
+searchbar
+-
+textbox
+>
+.
+autocomplete
+-
+textbox
+-
+container
+>
+.
+textbox
+-
+input
+-
+box
+>
+html
+|
+*
+.
+textbox
+-
+input
+:
+-
+moz
+-
+placeholder
+{
+color
+:
+#
+777
+;
+}
+#
+urlbar
 :
 hover
 .
