--- a/toolkit/themes/winstripe/global/textbox-aero.css
+++ b/toolkit/themes/winstripe/global/textbox-aero.css
@@ -3,3 +3,38 @@ include
 textbox
 .
 css
+textbox
+html
+|
+*
+.
+textbox
+-
+input
+:
+-
+moz
+-
+placeholder
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+default
+-
+theme
+)
+{
+font
+-
+style
+:
+italic
+;
+}
