Bug 36619 - Add a test checking that we can call .click() to show the filepicker if the originating element is a regular click (thus passing the popup blocker check). r=sicking a2.0=blocking
UltraBlame original commit: 126e91feeb53afc3fee235105e24ced2eb665746

--- a/layout/forms/test/test_bug36619.html
+++ b/layout/forms/test/test_bug36619.html
@@ -130,14 +130,6 @@ head
 >
 <
 body
-onload
-=
-"
-runTests
-(
-)
-;
-"
 >
 <
 a
@@ -194,6 +186,14 @@ id
 "
 content
 "
+style
+=
+"
+display
+:
+none
+;
+"
 >
 <
 input
@@ -211,6 +211,37 @@ file
 <
 /
 div
+>
+<
+button
+id
+=
+'
+b
+'
+onclick
+=
+"
+document
+.
+getElementById
+(
+'
+a
+'
+)
+.
+click
+(
+)
+;
+"
+>
+Show
+Filepicker
+<
+/
+button
 >
 <
 pre
@@ -615,7 +646,7 @@ UniversalXPConnect
 '
 )
 ;
-todo
+ok
 (
 shown
 "
@@ -728,22 +759,48 @@ finish
 )
 ;
 }
+SimpleTest
+.
+waitForFocus
+(
 function
-runTests
 (
 )
 {
+var
+b
+=
 document
 .
 getElementById
 (
-"
-a
-"
+'
+b
+'
 )
+;
+b
 .
-click
+focus
 (
+)
+;
+/
+/
+Be
+sure
+the
+element
+is
+visible
+.
+synthesizeMouse
+(
+b
+2
+2
+{
+}
 )
 ;
 SimpleTest
@@ -754,6 +811,8 @@ checkFirst
 )
 ;
 }
+)
+;
 <
 /
 script
