Bug 562902: Implement the final detail view mockups. r=Unfocused, a=blocking-b6
UltraBlame original commit: ea01bf6029f18d47a0882189ef8aed6b806daf08

--- a/toolkit/mozapps/extensions/content/extensions.css
+++ b/toolkit/mozapps/extensions/content/extensions.css
@@ -377,6 +377,40 @@ status
 )
 ;
 }
+.
+detail
+-
+row
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+mozapps
+/
+content
+/
+extensions
+/
+extensions
+.
+xml
+#
+detail
+-
+row
+"
+)
+;
+}
 #
 header
 -
@@ -440,6 +474,18 @@ true
 visibility
 :
 collapse
+;
+}
+#
+detail
+-
+view
+{
+overflow
+-
+y
+:
+auto
 ;
 }
 .
@@ -558,6 +604,104 @@ postfix
 detail
 -
 view
+:
+not
+(
+[
+notification
+=
+"
+warning
+"
+]
+)
+.
+warning
+#
+detail
+-
+view
+:
+not
+(
+[
+notification
+=
+"
+error
+"
+]
+)
+.
+error
+#
+detail
+-
+view
+:
+not
+(
+[
+notification
+=
+"
+info
+"
+]
+)
+.
+info
+#
+detail
+-
+view
+:
+not
+(
+[
+pending
+]
+)
+.
+pending
+#
+detail
+-
+view
+:
+not
+(
+[
+upgrade
+=
+"
+true
+"
+]
+)
+.
+update
+-
+postfix
+#
+detail
+-
+view
+[
+active
+=
+"
+true
+"
+]
+.
+disabled
+-
+postfix
+#
+detail
+-
+view
 [
 loading
 ]
@@ -568,6 +712,17 @@ detail
 view
 -
 container
+.
+detail
+-
+row
+:
+not
+(
+[
+value
+]
+)
 {
 display
 :
