--- a/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
@@ -1901,6 +1901,8 @@ height
 }
 .
 addon
+-
+view
 [
 type
 =
@@ -1939,6 +1941,8 @@ png
 }
 .
 addon
+-
+view
 [
 type
 =
@@ -1977,6 +1981,8 @@ png
 }
 .
 addon
+-
+view
 [
 type
 =
@@ -2015,12 +2021,8 @@ png
 }
 .
 name
-.
-version
-.
-update
 -
-postfix
+container
 {
 font
 -
@@ -2034,19 +2036,6 @@ margin
 bottom
 :
 0px
-;
-}
-.
-disabled
--
-postfix
-{
-font
--
-size
-:
-130
-%
 ;
 }
 .
@@ -2099,6 +2088,8 @@ start
 }
 .
 addon
+-
+view
 :
 not
 (
@@ -2117,6 +2108,8 @@ color
 }
 .
 addon
+-
+view
 :
 not
 (
@@ -2135,6 +2128,8 @@ color
 }
 .
 addon
+-
+view
 :
 not
 (
@@ -2152,8 +2147,6 @@ color
 ;
 }
 .
-addon
-.
 warning
 -
 icon
@@ -2195,11 +2188,10 @@ height
 ;
 margin
 :
+3px
 0
 ;
 }
-.
-addon
 .
 error
 -
@@ -2242,17 +2234,14 @@ height
 ;
 margin
 :
+3px
 0
 ;
 }
-.
-addon
 .
 pending
 -
 icon
-.
-addon
 .
 info
 -
@@ -2295,11 +2284,14 @@ height
 ;
 margin
 :
+3px
 0
 ;
 }
 .
 addon
+-
+view
 [
 notification
 =
@@ -2342,6 +2334,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 notification
 =
@@ -2384,6 +2378,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 notification
 =
@@ -2426,6 +2422,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 pending
 =
@@ -2435,6 +2433,8 @@ enable
 ]
 .
 addon
+-
+view
 [
 pending
 =
@@ -2444,6 +2444,8 @@ upgrade
 ]
 .
 addon
+-
+view
 [
 pending
 =
@@ -2486,6 +2488,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 pending
 =
@@ -2495,6 +2499,8 @@ disable
 ]
 .
 addon
+-
+view
 [
 pending
 =
@@ -3154,64 +3160,63 @@ view
 -
 container
 {
-overflow
-:
-auto
-;
 padding
 :
-10px
-20px
+2em
 ;
-}
-.
-detail
+font
 -
-basicinfo
-{
-padding
+size
 :
-10px
-0px
-;
--
-moz
--
-box
--
-align
-:
-center
-;
-}
-.
-detail
--
-extra
-{
-margin
--
-top
-:
-20px
+110
+%
 ;
 }
 #
 detail
 -
-desc
+notifications
 {
-min
--
-height
-:
-40px
-;
 margin
 -
 bottom
 :
-20px
+2em
+;
+}
+#
+detail
+-
+notifications
+.
+warning
+#
+detail
+-
+notifications
+.
+pending
+#
+detail
+-
+notifications
+.
+error
+#
+detail
+-
+notifications
+.
+info
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
 ;
 }
 #
@@ -3219,14 +3224,6 @@ detail
 -
 icon
 {
-width
-:
-32px
-;
-height
-:
-32px
-;
 -
 moz
 -
@@ -3236,162 +3233,25 @@ end
 :
 10px
 ;
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
-.
-png
-"
-)
-;
 }
 #
 detail
 -
-view
-[
-type
-=
-"
-theme
-"
-]
-#
-detail
--
-icon
+summary
 {
-list
+margin
 -
-style
--
-image
+bottom
 :
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-themeGeneric
-.
-png
-"
-)
-;
-}
-#
-detail
--
-view
-[
-type
-=
-"
-locale
-"
-]
-#
-detail
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-localeGeneric
-.
-png
-"
-)
-;
-}
-#
-detail
--
-view
-[
-type
-=
-"
-plugin
-"
-]
-#
-detail
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-plugins
-/
-pluginGeneric
-.
-png
-"
-)
+2em
 ;
 }
 #
 detail
 -
 name
+-
+container
 {
 font
 -
@@ -3406,95 +3266,55 @@ detail
 -
 screenshot
 {
-width
-:
-140px
-;
-height
-:
-140px
-;
-background
 -
-color
-:
-blue
-;
+moz
+-
 margin
+-
+end
 :
-0px
-10px
-00px
-0px
+2em
 ;
 }
-.
+#
 detail
 -
-prefs
+desc
+-
+container
+{
+margin
+-
+bottom
+:
+2em
+;
+}
+#
+detail
+-
+desc
 {
 -
 moz
 -
-box
+margin
 -
-align
-:
 start
-;
-}
-.
-meta
--
-label
-{
-font
--
-weight
 :
-bold
+6px
+;
+outline
+:
+solid
+transparent
 ;
 }
 #
 detail
 -
-notification
+contributions
 {
--
-moz
--
-box
--
-align
-:
-center
-;
--
-moz
--
-box
--
-pack
-:
-center
-;
-margin
-:
-0px
-50px
-;
-padding
-:
-4px
-20px
-;
-background
--
-color
-:
-#
-FDFFA8
-;
 -
 moz
 -
@@ -3502,21 +3322,233 @@ border
 -
 radius
 :
-8px
-;
-font
--
-size
-:
-120
-%
+5px
 ;
 border
 :
-2px
+1px
 solid
 #
-F0F6A3
+B0C8D1
+;
+margin
+-
+bottom
+:
+2em
+;
+padding
+:
+1em
+;
+background
+:
+#
+D8DDE4
+;
+}
+#
+detail
+-
+contrib
+-
+description
+{
+font
+-
+style
+:
+italic
+;
+margin
+-
+bottom
+:
+1em
+;
+}
+#
+detail
+-
+contrib
+-
+suggested
+{
+color
+:
+grey
+;
+}
+#
+detail
+-
+contrib
+-
+button
+{
+color
+:
+#
+FFF
+;
+font
+-
+weight
+:
+bold
+;
+text
+-
+shadow
+:
+#
+4C9EF8
+-
+1px
+-
+1px
+1px
+;
+border
+:
+1px
+solid
+#
+4C9EF8
+;
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+#
+93C5FA
+#
+4C9EF8
+)
+;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+extensions
+/
+heart
+.
+png
+"
+)
+;
+}
+#
+detail
+-
+contrib
+-
+button
+:
+hover
+{
+border
+-
+color
+:
+#
+4271FF
+;
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+#
+49CEFF
+#
+4271FF
+)
+;
+}
+#
+detail
+-
+grid
+{
+margin
+-
+bottom
+:
+2em
+;
+}
+.
+detail
+-
+row
+.
+detail
+-
+row
+-
+complex
+{
+border
+-
+bottom
+:
+1px
+solid
+grey
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+.
+detail
+-
+row
+-
+value
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
 ;
 }
 .
@@ -4514,6 +4546,10 @@ width
 :
 0
 ;
+margin
+:
+0
+;
 }
 .
 remove
@@ -4598,121 +4634,6 @@ active
 .
 png
 "
-)
-;
-}
-.
-contribute
-{
--
-moz
--
-appearance
-:
-none
-;
-color
-:
-#
-FFF
-;
-font
--
-weight
-:
-bold
-;
-text
--
-shadow
-:
-#
-4C9EF8
--
-1px
--
-1px
-1px
-;
-border
-:
-1px
-solid
-#
-4C9EF8
-;
--
-moz
--
-border
--
-radius
-:
-10000px
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-#
-93C5FA
-#
-4C9EF8
-)
-;
--
-moz
--
-padding
--
-start
-:
-20px
-;
--
-moz
--
-padding
--
-end
-:
-4px
-;
-}
-.
-contribute
-:
-hover
-{
-border
--
-color
-:
-#
-4271FF
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-#
-49CEFF
-#
-4271FF
 )
 ;
 }
