--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -1998,6 +1998,8 @@ height
 }
 .
 addon
+-
+view
 [
 type
 =
@@ -2036,6 +2038,8 @@ png
 }
 .
 addon
+-
+view
 [
 type
 =
@@ -2074,6 +2078,8 @@ png
 }
 .
 addon
+-
+view
 [
 type
 =
@@ -2112,12 +2118,8 @@ png
 }
 .
 name
-.
-version
-.
-update
 -
-postfix
+container
 {
 font
 -
@@ -2131,19 +2133,6 @@ margin
 bottom
 :
 0px
-;
-}
-.
-disabled
--
-postfix
-{
-font
--
-size
-:
-130
-%
 ;
 }
 .
@@ -2196,6 +2185,8 @@ start
 }
 .
 addon
+-
+view
 :
 not
 (
@@ -2214,6 +2205,8 @@ color
 }
 .
 addon
+-
+view
 :
 not
 (
@@ -2232,6 +2225,8 @@ color
 }
 .
 addon
+-
+view
 :
 not
 (
@@ -2249,8 +2244,6 @@ color
 ;
 }
 .
-addon
-.
 warning
 -
 icon
@@ -2292,11 +2285,10 @@ height
 ;
 margin
 :
+3px
 0
 ;
 }
-.
-addon
 .
 error
 -
@@ -2339,17 +2331,14 @@ height
 ;
 margin
 :
+3px
 0
 ;
 }
-.
-addon
 .
 pending
 -
 icon
-.
-addon
 .
 info
 -
@@ -2392,11 +2381,14 @@ height
 ;
 margin
 :
+3px
 0
 ;
 }
 .
 addon
+-
+view
 [
 notification
 =
@@ -2439,6 +2431,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 notification
 =
@@ -2481,6 +2475,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 notification
 =
@@ -2523,6 +2519,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 pending
 =
@@ -2532,6 +2530,8 @@ enable
 ]
 .
 addon
+-
+view
 [
 pending
 =
@@ -2541,6 +2541,8 @@ upgrade
 ]
 .
 addon
+-
+view
 [
 pending
 =
@@ -2583,6 +2585,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 pending
 =
@@ -2592,6 +2596,8 @@ disable
 ]
 .
 addon
+-
+view
 [
 pending
 =
@@ -3212,58 +3218,61 @@ auto
 ;
 padding
 :
-10px
-20px
+2em
 ;
-}
-.
-detail
+font
 -
-basicinfo
-{
-padding
+size
 :
-10px
-0px
-;
--
-moz
--
-box
--
-align
-:
-center
-;
-}
-.
-detail
--
-extra
-{
-margin
--
-top
-:
-20px
+110
+%
 ;
 }
 #
 detail
 -
-desc
+notifications
 {
-min
--
-height
-:
-40px
-;
 margin
 -
 bottom
 :
-20px
+2em
+;
+}
+#
+detail
+-
+notifications
+.
+warning
+#
+detail
+-
+notifications
+.
+pending
+#
+detail
+-
+notifications
+.
+error
+#
+detail
+-
+notifications
+.
+info
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
 ;
 }
 #
@@ -3271,14 +3280,6 @@ detail
 -
 icon
 {
-width
-:
-32px
-;
-height
-:
-32px
-;
 -
 moz
 -
@@ -3288,162 +3289,25 @@ end
 :
 10px
 ;
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
-.
-png
-"
-)
-;
 }
 #
 detail
 -
-view
-[
-type
-=
-"
-theme
-"
-]
-#
-detail
--
-icon
+summary
 {
-list
+margin
 -
-style
--
-image
+bottom
 :
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-themeGeneric
-.
-png
-"
-)
-;
-}
-#
-detail
--
-view
-[
-type
-=
-"
-locale
-"
-]
-#
-detail
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-localeGeneric
-.
-png
-"
-)
-;
-}
-#
-detail
--
-view
-[
-type
-=
-"
-plugin
-"
-]
-#
-detail
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-plugins
-/
-pluginGeneric
-.
-png
-"
-)
+2em
 ;
 }
 #
 detail
 -
 name
+-
+container
 {
 font
 -
@@ -3458,95 +3322,55 @@ detail
 -
 screenshot
 {
-width
-:
-140px
-;
-height
-:
-140px
-;
-background
 -
-color
-:
-blue
-;
+moz
+-
 margin
+-
+end
 :
-0px
-10px
-00px
-0px
+2em
 ;
 }
-.
+#
 detail
 -
-prefs
+desc
+-
+container
+{
+margin
+-
+bottom
+:
+2em
+;
+outline
+:
+solid
+transparent
+;
+}
+#
+detail
+-
+desc
 {
 -
 moz
 -
-box
+margin
 -
-align
-:
 start
-;
-}
-.
-meta
--
-label
-{
-font
--
-weight
 :
-bold
+6px
 ;
 }
 #
 detail
 -
-notification
+contributions
 {
--
-moz
--
-box
--
-align
-:
-center
-;
--
-moz
--
-box
--
-pack
-:
-center
-;
-margin
-:
-0px
-50px
-;
-padding
-:
-4px
-20px
-;
-background
--
-color
-:
-#
-FDFFA8
-;
 -
 moz
 -
@@ -3554,21 +3378,119 @@ border
 -
 radius
 :
-8px
-;
-font
--
-size
-:
-120
-%
+5px
 ;
 border
 :
-2px
+1px
 solid
 #
-F0F6A3
+B0C8D1
+;
+margin
+-
+bottom
+:
+2em
+;
+padding
+:
+1em
+;
+background
+:
+#
+D8DDE4
+;
+}
+#
+detail
+-
+contrib
+-
+description
+{
+font
+-
+style
+:
+italic
+;
+margin
+-
+bottom
+:
+1em
+;
+}
+#
+detail
+-
+contrib
+-
+suggested
+{
+color
+:
+grey
+;
+}
+#
+detail
+-
+grid
+{
+margin
+-
+bottom
+:
+2em
+;
+}
+.
+detail
+-
+row
+.
+detail
+-
+row
+-
+complex
+{
+border
+-
+bottom
+:
+1px
+solid
+grey
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+.
+detail
+-
+row
+-
+value
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
 ;
 }
 .
@@ -4419,6 +4341,10 @@ width
 :
 0
 ;
+margin
+:
+0
+;
 }
 .
 remove
@@ -4460,121 +4386,6 @@ box
 padding
 :
 0
-;
-}
-.
-contribute
-{
--
-moz
--
-appearance
-:
-none
-;
-color
-:
-#
-FFF
-;
-font
--
-weight
-:
-bold
-;
-text
--
-shadow
-:
-#
-4C9EF8
--
-1px
--
-1px
-1px
-;
-border
-:
-1px
-solid
-#
-4C9EF8
-;
--
-moz
--
-border
--
-radius
-:
-10000px
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-#
-93C5FA
-#
-4C9EF8
-)
-;
--
-moz
--
-padding
--
-start
-:
-20px
-;
--
-moz
--
-padding
--
-end
-:
-4px
-;
-}
-.
-contribute
-:
-hover
-{
-border
--
-color
-:
-#
-4271FF
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-#
-49CEFF
-#
-4271FF
-)
 ;
 }
 .
