--- a/toolkit/themes/winstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/winstripe/mozapps/extensions/extensions.css
@@ -1695,6 +1695,8 @@ height
 }
 .
 addon
+-
+view
 [
 type
 =
@@ -1733,6 +1735,8 @@ png
 }
 .
 addon
+-
+view
 [
 type
 =
@@ -1771,6 +1775,8 @@ png
 }
 .
 addon
+-
+view
 [
 type
 =
@@ -1809,12 +1815,8 @@ png
 }
 .
 name
-.
-version
-.
-update
 -
-postfix
+container
 {
 font
 -
@@ -1828,19 +1830,6 @@ margin
 bottom
 :
 0px
-;
-}
-.
-disabled
--
-postfix
-{
-font
--
-size
-:
-130
-%
 ;
 }
 .
@@ -1893,6 +1882,8 @@ start
 }
 .
 addon
+-
+view
 :
 not
 (
@@ -1911,6 +1902,8 @@ color
 }
 .
 addon
+-
+view
 :
 not
 (
@@ -1929,6 +1922,8 @@ color
 }
 .
 addon
+-
+view
 :
 not
 (
@@ -1946,8 +1941,6 @@ color
 ;
 }
 .
-addon
-.
 warning
 -
 icon
@@ -1989,11 +1982,10 @@ height
 ;
 margin
 :
+3px
 0
 ;
 }
-.
-addon
 .
 error
 -
@@ -2036,17 +2028,14 @@ height
 ;
 margin
 :
+3px
 0
 ;
 }
-.
-addon
 .
 pending
 -
 icon
-.
-addon
 .
 info
 -
@@ -2089,11 +2078,14 @@ height
 ;
 margin
 :
+3px
 0
 ;
 }
 .
 addon
+-
+view
 [
 notification
 =
@@ -2136,6 +2128,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 notification
 =
@@ -2178,6 +2172,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 notification
 =
@@ -2220,6 +2216,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 pending
 =
@@ -2229,6 +2227,8 @@ enable
 ]
 .
 addon
+-
+view
 [
 pending
 =
@@ -2238,6 +2238,8 @@ upgrade
 ]
 .
 addon
+-
+view
 [
 pending
 =
@@ -2280,6 +2282,8 @@ rgba
 }
 .
 addon
+-
+view
 [
 pending
 =
@@ -2289,6 +2293,8 @@ disable
 ]
 .
 addon
+-
+view
 [
 pending
 =
@@ -2956,58 +2962,61 @@ auto
 ;
 padding
 :
-10px
-20px
+2em
 ;
-}
-.
-detail
+font
 -
-basicinfo
-{
-padding
+size
 :
-10px
-0px
-;
--
-moz
--
-box
--
-align
-:
-center
-;
-}
-.
-detail
--
-extra
-{
-margin
--
-top
-:
-20px
+110
+%
 ;
 }
 #
 detail
 -
-desc
+notifications
 {
-min
--
-height
-:
-40px
-;
 margin
 -
 bottom
 :
-20px
+2em
+;
+}
+#
+detail
+-
+notifications
+.
+warning
+#
+detail
+-
+notifications
+.
+pending
+#
+detail
+-
+notifications
+.
+error
+#
+detail
+-
+notifications
+.
+info
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
 ;
 }
 #
@@ -3015,14 +3024,6 @@ detail
 -
 icon
 {
-width
-:
-32px
-;
-height
-:
-32px
-;
 -
 moz
 -
@@ -3032,162 +3033,25 @@ end
 :
 10px
 ;
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
-.
-png
-"
-)
-;
 }
 #
 detail
 -
-view
-[
-type
-=
-"
-theme
-"
-]
-#
-detail
--
-icon
+summary
 {
-list
+margin
 -
-style
--
-image
+bottom
 :
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-themeGeneric
-.
-png
-"
-)
-;
-}
-#
-detail
--
-view
-[
-type
-=
-"
-locale
-"
-]
-#
-detail
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-localeGeneric
-.
-png
-"
-)
-;
-}
-#
-detail
--
-view
-[
-type
-=
-"
-plugin
-"
-]
-#
-detail
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-plugins
-/
-pluginGeneric
-.
-png
-"
-)
+2em
 ;
 }
 #
 detail
 -
 name
+-
+container
 {
 font
 -
@@ -3202,94 +3066,156 @@ detail
 -
 screenshot
 {
-width
-:
-140px
-;
-height
-:
-140px
-;
-background
--
-color
-:
-blue
-;
-margin
-:
-0px
-10px
-00px
-0px
-;
-}
-.
-detail
--
-prefs
-{
 -
 moz
 -
-box
+margin
 -
-align
+end
 :
-start
-;
-}
-.
-meta
--
-label
-{
-font
--
-weight
-:
-bold
+2em
 ;
 }
 #
 detail
 -
-notification
+desc
+-
+container
+{
+margin
+-
+bottom
+:
+2em
+;
+outline
+:
+solid
+transparent
+;
+}
+#
+detail
+-
+desc
 {
 -
 moz
 -
-box
+margin
 -
-align
+start
 :
-center
+6px
 ;
+}
+#
+detail
+-
+contributions
+{
 -
 moz
 -
-box
+border
 -
-pack
+radius
 :
-center
+5px
+;
+border
+:
+1px
+solid
+#
+B0C8D1
 ;
 margin
+-
+bottom
 :
-0px
-50px
+2em
 ;
 padding
 :
-4px
-20px
+1em
 ;
 background
+:
+#
+D8DDE4
+;
+}
+#
+detail
 -
+contrib
+-
+description
+{
+font
+-
+style
+:
+italic
+;
+margin
+-
+bottom
+:
+1em
+;
+}
+#
+detail
+-
+contrib
+-
+suggested
+{
+color
+:
+grey
+;
+}
+#
+detail
+-
+contrib
+-
+button
+{
+-
+moz
+-
+appearance
+:
+none
+;
 color
 :
 #
-FDFFA8
+FFF
+;
+text
+-
+shadow
+:
+#
+4C9EF8
+-
+1px
+-
+1px
+1px
+;
+border
+:
+1px
+solid
+#
+4C9EF8
 ;
 -
 moz
@@ -3298,21 +3224,162 @@ border
 -
 radius
 :
-8px
-;
-font
--
-size
-:
-120
-%
-;
-border
-:
 2px
-solid
+;
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
 #
-F0F6A3
+93C5FA
+#
+4C9EF8
+)
+;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+extensions
+/
+heart
+.
+png
+"
+)
+;
+}
+#
+detail
+-
+contrib
+-
+button
+.
+button
+-
+icon
+{
+-
+moz
+-
+margin
+-
+end
+:
+3px
+;
+}
+#
+detail
+-
+contrib
+-
+button
+:
+hover
+{
+border
+-
+color
+:
+#
+4271FF
+;
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+#
+49CEFF
+#
+4271FF
+)
+;
+}
+#
+detail
+-
+grid
+{
+margin
+-
+bottom
+:
+2em
+;
+}
+.
+detail
+-
+row
+.
+detail
+-
+row
+-
+complex
+{
+border
+-
+bottom
+:
+1px
+solid
+grey
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+.
+detail
+-
+row
+-
+value
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
 ;
 }
 .
@@ -4188,6 +4255,10 @@ width
 :
 0
 ;
+margin
+:
+0
+;
 }
 .
 remove
@@ -4299,121 +4370,6 @@ text
 display
 :
 none
-;
-}
-.
-contribute
-{
--
-moz
--
-appearance
-:
-none
-;
-color
-:
-#
-FFF
-;
-font
--
-weight
-:
-bold
-;
-text
--
-shadow
-:
-#
-4C9EF8
--
-1px
--
-1px
-1px
-;
-border
-:
-1px
-solid
-#
-4C9EF8
-;
--
-moz
--
-border
--
-radius
-:
-10000px
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-#
-93C5FA
-#
-4C9EF8
-)
-;
--
-moz
--
-padding
--
-start
-:
-20px
-;
--
-moz
--
-padding
--
-end
-:
-4px
-;
-}
-.
-contribute
-:
-hover
-{
-border
--
-color
-:
-#
-4271FF
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-#
-49CEFF
-#
-4271FF
-)
 ;
 }
 .
