--- a/browser/themes/winstripe/browser/tabview/tabview.css
+++ b/browser/themes/winstripe/browser/tabview/tabview.css
@@ -1,6 +1,364 @@
+body
+{
+background
+-
+color
+:
+transparent
+;
+font
+-
+family
+:
+Tahoma
+sans
+-
+serif
+!
+important
+;
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+4
+)
+;
+font
+-
+size
+:
+12px
+;
+line
+-
+height
+:
+16px
+;
+}
+#
+bg
+{
+background
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+top
+#
+F1F5FB
+#
+EDF4FB
+)
+;
+}
+.
+tab
+{
+padding
+:
+4px
+6px
+6px
+4px
+;
+border
+:
+1px
+solid
+rgba
+(
+230
+230
+230
+1
+)
+;
+background
+-
+color
+:
+rgba
+(
+245
+245
+245
+1
+)
+;
+-
+moz
+-
+border
+-
+radius
+:
+0
+.
+4em
+;
+-
+moz
+-
+box
+-
+shadow
+:
+inset
+rgba
+(
+255
+255
+255
+0
+.
+6
+)
+0
+0
+0
+2px
+;
+cursor
+:
+pointer
+;
+}
+.
+tab
+canvas
+.
+cached
+-
+thumb
+{
+border
+:
+1px
+solid
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+;
+}
+.
+thumb
+-
+shadow
+{
+border
+-
+bottom
+:
+5px
+solid
+rgba
+(
+0
+0
+0
+0
+.
+05
+)
+;
+margin
+-
+right
+:
+-
+12px
+;
+bottom
+:
+2px
+;
+width
+:
+94
+.
+5
+%
+;
+}
+.
+favicon
+{
+background
+-
+color
+:
+rgba
+(
+245
+245
+245
+1
+)
+;
+-
+moz
+-
+border
+-
+radius
+-
+bottomright
+:
+0
+.
+4em
+;
+-
+moz
+-
+box
+-
+shadow
+:
+inset
+rgba
+(
+255
+255
+255
+0
+.
+6
+)
+0
+-
+2px
+0px
+inset
+rgba
+(
+255
+255
+255
+0
+.
+6
+)
+-
+2px
+0px
+0px
+;
+padding
+:
+4px
+6px
+6px
+4px
+;
+top
+:
+4px
+;
+left
+:
+4px
+;
+border
+-
+right
+:
+1px
+solid
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+;
+border
+-
+bottom
+:
+1px
+solid
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+;
+height
+:
+17px
+;
+width
+:
+17px
+;
+}
+.
+favicon
+img
+{
+border
+:
+none
+;
+width
+:
+16px
+;
+height
+:
+16px
+;
+}
 .
 close
 {
+top
+:
+6px
+;
+right
+:
+6px
+;
+width
+:
+16px
+;
+height
+:
+16px
+;
+opacity
+:
+0
+.
+2
+;
 background
 :
 url
@@ -24,116 +382,112 @@ no
 repeat
 ;
 }
-#
-bg
+.
+close
+:
+hover
 {
-background
+opacity
 :
--
-moz
--
-linear
--
-gradient
-(
-top
-#
-F1F5FB
-#
-EDF4FB
-)
-;
-position
-:
-absolute
-;
-top
-:
+1
+.
 0
-;
-left
-:
-0
-;
-width
-:
-100
-%
-;
-height
-:
-100
-%
-;
-z
--
-index
-:
--
-999999
 ;
 }
 .
-newTabButtonAlt
+expander
 {
-position
+bottom
 :
-absolute
+6px
 ;
-cursor
+right
 :
-pointer
+6px
 ;
-z
+width
+:
+16px
+;
+height
+:
+16px
+;
+background
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+resizer
+.
+png
+)
+no
 -
-index
+repeat
+;
+opacity
 :
-99999
+0
+.
+2
+;
+}
+.
+expander
+:
+hover
+{
+opacity
+:
+1
+.
+0
+;
+}
+.
+favicon
+img
+:
+hover
+.
+close
+img
+:
+hover
+.
+expander
+img
+:
+hover
+{
+opacity
+:
+1
 ;
 border
 :
 none
 ;
+}
+.
+tab
 -
-moz
--
-border
--
-radius
-:
-4px
-;
-font
--
-size
-:
-50px
-;
-line
--
-height
-:
-50px
-;
-height
-:
-57px
-!
-important
-;
-width
-:
-70px
-!
-important
-;
-margin
--
+title
+{
 top
 :
-4px
-!
-important
+100
+%
 ;
 text
 -
@@ -141,12 +495,245 @@ align
 :
 center
 ;
+width
+:
+94
+.
+5
+%
+;
+white
+-
+space
+:
+nowrap
+;
+overflow
+:
+hidden
+;
+}
+.
+stacked
+{
+padding
+:
+0
+;
+}
+.
+stacked
+.
+thumb
+{
+-
+moz
+-
+box
+-
+shadow
+:
+rgba
+(
+0
+0
+0
+.
+2
+)
+1px
+1px
+6px
+;
+}
+.
+stack
+-
+trayed
+.
+tab
+-
+title
+{
+text
+-
+shadow
+:
+rgba
+(
+0
+0
+0
+1
+)
+1px
+1px
+2px
+;
+color
+:
+#
+EEE
+;
+font
+-
+size
+:
+11px
+;
+}
+.
+stack
+-
+trayed
+.
+thumb
+{
+-
+moz
+-
+box
+-
+shadow
+:
+none
+!
+important
+;
+}
+.
+focus
+{
+-
+moz
+-
+box
+-
+shadow
+:
+rgba
+(
+54
+79
+225
+1
+)
+0px
+0px
+5px
+-
+1px
+!
+important
+;
+}
+.
+front
+.
+tab
+-
+title
+.
+front
+.
+close
+.
+front
+.
+favicon
+.
+front
+.
+expander
+.
+front
+.
+thumb
+-
+shadow
+{
+display
+:
+none
+;
+}
+.
+front
+.
+focus
+{
+-
+moz
+-
+box
+-
+shadow
+:
+none
+!
+important
+;
+}
+.
+tabInGroupItem
+{
+border
+:
+none
+;
+-
+moz
+-
+box
+-
+shadow
+:
+none
+!
+important
+;
+}
+.
+groupItem
+{
+cursor
+:
+move
+;
+border
+:
+1px
+solid
+rgba
+(
+230
+230
+230
+1
+)
+;
 background
 -
 color
 :
-#
-B9CDEB
+rgba
+(
+248
+248
+248
+1
+)
+;
+-
+moz
+-
+border
+-
+radius
+:
+0
+.
+4em
 ;
 -
 moz
@@ -156,100 +743,108 @@ box
 shadow
 :
 inset
-0px
-0px
-5px
-rgba
-(
-0
-0
-0
-.
-5
-)
-0
-1px
-0
 rgba
 (
 255
 255
 255
-.
-3
-)
-;
-}
-.
-newTabButtonAlt
->
-span
-{
-color
-:
-#
-D9E7FC
-;
-text
--
-shadow
-:
-0px
-0px
-7px
-rgba
-(
 0
-0
-0
-.
-4
-)
-0
--
-1px
-0
-rgba
-(
-255
-255
-255
 .
 6
 )
-;
-font
--
-weight
-:
-bold
+0
+0
+0
+2px
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+1px
+1px
+4px
 ;
 }
 .
-newTabGroup
+groupItem
+.
+activeGroupItem
 {
-background
 -
-color
-:
-#
-D9E7FC
-;
-border
-:
-none
-;
-border
+moz
 -
-top
+box
+-
+shadow
+:
+rgba
+(
+0
+0
+0
+0
+.
+6
+)
+1px
+1px
+8px
+;
+}
+.
+phantom
+{
+border
 :
 1px
 solid
 rgba
 (
-127
-127
-127
+190
+190
+190
+1
+)
+;
+}
+.
+overlay
+{
+background
+-
+color
+:
+rgba
+(
+0
+0
+0
+.
+7
+)
+!
+important
+;
+-
+moz
+-
+box
+-
+shadow
+:
+3px
+3px
+8px
+rgba
+(
+0
+0
+0
 .
 5
 )
@@ -263,7 +858,52 @@ radius
 :
 0
 .
-1em
+4em
+;
+}
+.
+info
+-
+item
+{
+cursor
+:
+move
+;
+border
+:
+1px
+solid
+rgba
+(
+230
+230
+230
+1
+)
+;
+background
+-
+color
+:
+rgba
+(
+248
+248
+248
+1
+)
+;
+-
+moz
+-
+border
+-
+radius
+:
+0
+.
+4em
 ;
 -
 moz
@@ -273,30 +913,73 @@ box
 shadow
 :
 inset
-0px
-5px
-10px
+rgba
+(
+255
+255
+255
+0
+.
+6
+)
+0
+0
+0
+2px
 rgba
 (
 0
 0
 0
 .
-1
+2
 )
+1px
+1px
+4px
 ;
 }
 .
-inNewTabGroup
-.
-favicon
+intro
 {
-background
--
-color
+margin
 :
-#
-D9E7FC
+10px
+;
+}
+.
+guideTrench
+{
+opacity
+:
+0
+.
+9
+;
+border
+:
+1px
+dashed
+rgba
+(
+0
+0
+0
+.
+12
+)
+;
+border
+-
+bottom
+:
+none
+;
+border
+-
+right
+:
+none
 ;
 -
 moz
@@ -305,6 +988,571 @@ box
 -
 shadow
 :
-none
+1px
+1px
+0
+rgba
+(
+255
+255
+255
+.
+15
+)
+;
+}
+.
+visibleTrench
+{
+opacity
+:
+0
+.
+05
+;
+}
+.
+activeVisibleTrench
+{
+opacity
+:
+0
+;
+}
+.
+activeVisibleTrench
+.
+activeTrench
+{
+opacity
+:
+0
+.
+45
+;
+}
+.
+visibleTrench
+.
+border
+.
+activeVisibleTrench
+.
+border
+{
+background
+-
+color
+:
+red
+;
+}
+.
+visibleTrench
+.
+guide
+.
+activeVisibleTrench
+.
+guide
+{
+background
+-
+color
+:
+blue
+;
+}
+.
+newTabButton
+{
+width
+:
+16px
+;
+height
+:
+15px
+;
+bottom
+:
+10px
+;
+left
+:
+10px
+;
+cursor
+:
+pointer
+;
+opacity
+:
+.
+3
+;
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabview
+/
+new
+-
+tab
+.
+png
+)
+;
+}
+.
+newTabButton
+:
+hover
+{
+opacity
+:
+1
+;
+}
+.
+active
+{
+-
+moz
+-
+box
+-
+shadow
+:
+5px
+5px
+4px
+rgba
+(
+0
+0
+0
+.
+5
+)
+;
+}
+.
+acceptsDrop
+{
+-
+moz
+-
+box
+-
+shadow
+:
+2px
+2px
+10px
+-
+1px
+rgba
+(
+0
+0
+0
+.
+6
+)
+;
+}
+.
+titlebar
+{
+font
+-
+size
+:
+12px
+;
+line
+-
+height
+:
+18px
+;
+height
+:
+18px
+;
+}
+input
+.
+name
+{
+background
+:
+transparent
+;
+border
+:
+1px
+solid
+transparent
+;
+color
+:
+#
+999
+;
+margin
+:
+3px
+0px
+0px
+3px
+;
+padding
+:
+1px
+;
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabview
+/
+edit
+-
+light
+.
+png
+)
+;
+padding
+-
+left
+:
+20px
+;
+}
+.
+title
+-
+container
+:
+hover
+input
+.
+name
+{
+border
+:
+1px
+solid
+#
+ddd
+;
+}
+.
+title
+-
+container
+:
+hover
+input
+.
+name
+-
+locked
+{
+border
+:
+1px
+solid
+transparent
+!
+important
+;
+cursor
+:
+default
+;
+}
+input
+.
+name
+:
+focus
+{
+color
+:
+#
+555
+;
+}
+input
+.
+defaultName
+{
+font
+-
+style
+:
+italic
+!
+important
+;
+background
+-
+image
+-
+opacity
+:
+.
+1
+;
+color
+:
+transparent
+;
+}
+.
+title
+-
+container
+:
+hover
+input
+.
+defaultName
+{
+color
+:
+#
+CCC
+;
+}
+.
+title
+-
+container
+{
+cursor
+:
+text
+;
+}
+.
+title
+-
+shield
+{
+margin
+:
+3px
+0px
+0px
+3px
+;
+padding
+:
+1px
+;
+left
+:
+0
+;
+top
+:
+0
+;
+width
+:
+100
+%
+;
+height
+:
+100
+%
+;
+}
+.
+transparentBorder
+{
+border
+:
+1px
+solid
+transparent
+!
+important
+;
+}
+.
+stackExpander
+{
+opacity
+:
+.
+4
+;
+cursor
+:
+pointer
+;
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabview
+/
+stack
+-
+expander
+.
+png
+)
+;
+width
+:
+24px
+;
+height
+:
+24px
+;
+}
+.
+stackExpander
+:
+hover
+{
+opacity
+:
+.
+7
+!
+important
+;
+}
+.
+resizer
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+resizer
+.
+png
+)
+;
+width
+:
+16px
+;
+height
+:
+16px
+;
+bottom
+:
+0px
+;
+right
+:
+0px
+;
+opacity
+:
+.
+2
+;
+}
+.
+iq
+-
+resizable
+-
+handle
+{
+font
+-
+size
+:
+0
+.
+1px
+;
+}
+.
+iq
+-
+resizable
+-
+se
+{
+cursor
+:
+se
+-
+resize
+;
+width
+:
+12px
+;
+height
+:
+12px
+;
+right
+:
+1px
+;
+bottom
+:
+1px
 ;
 }
