--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1304,6 +1304,59 @@ serif
 .
 appmenu
 -
+menuseparator
+{
+-
+moz
+-
+appearance
+:
+none
+;
+margin
+-
+top
+:
+3px
+;
+margin
+-
+bottom
+:
+3px
+;
+-
+moz
+-
+margin
+-
+start
+:
+30px
+;
+padding
+:
+0
+;
+border
+-
+top
+:
+1px
+solid
+#
+d6e5f5
+;
+border
+-
+bottom
+:
+none
+;
+}
+.
+appmenu
+-
 edit
 -
 button
