Bug 240933 - Part 3: Correct the caret movement throughout textareas (and pre elements with caret browsing turned on as well); r=roc a=dbaron
UltraBlame original commit: e2e545fc9e23404fabddb8930f7bd15aa656d334

--- a/layout/generic/test/test_movement_by_characters.html
+++ b/layout/generic/test/test_movement_by_characters.html
@@ -664,20 +664,15 @@ firstChild
 /
 at
 the
-'
-bb
-'
-but
-HINTLEFT
-so
-appears
-at
-the
 end
 of
 the
 first
 line
+before
+the
+\
+n
 testRight
 (
 editor
@@ -685,7 +680,7 @@ editor
 firstChild
 .
 firstChild
-3
+2
 )
 ;
 testRight
@@ -722,20 +717,15 @@ firstChild
 /
 at
 the
-'
-bb
-'
-but
-HINTLEFT
-so
-appears
-at
-the
 end
 of
 the
 first
 line
+before
+the
+\
+n
 testLeft
 (
 editor
@@ -743,7 +733,7 @@ editor
 firstChild
 .
 firstChild
-3
+2
 )
 ;
 testLeft
