--- a/layout/base/tests/test_reftests_with_caret.html
+++ b/layout/base/tests/test_reftests_with_caret.html
@@ -683,6 +683,42 @@ html
 ]
 [
 '
+bug240933
+-
+1
+.
+html
+'
+'
+bug240933
+-
+1
+-
+ref
+.
+html
+'
+]
+[
+'
+bug240933
+-
+2
+.
+html
+'
+'
+bug240933
+-
+1
+-
+ref
+.
+html
+'
+]
+[
+'
 bug482484
 .
 html
