Bug 240933 - Part 12: Avoid injecting textnodes as children of br nodes; r,a=roc
UltraBlame original commit: 117eb39cd47f9d8a24482c398954daaf08327fb8

--- a/layout/generic/test/test_bug240933.html
+++ b/layout/generic/test/test_bug240933.html
@@ -302,6 +302,63 @@ newline
 "
 )
 ;
+t
+=
+document
+.
+getElementById
+(
+"
+ta
+"
+)
+;
+t
+.
+focus
+(
+)
+;
+var
+val
+=
+t
+.
+value
+;
+synthesizeKey
+(
+"
+VK_ENTER
+"
+{
+}
+)
+;
+is
+(
+t
+.
+value
+val
++
+"
+\
+n
+"
+"
+Pressing
+enter
+right
+after
+focusing
+the
+textarea
+should
+work
+"
+)
+;
 SimpleTest
 .
 finish
@@ -338,6 +395,29 @@ cols
 "
 >
 abc
+<
+/
+textarea
+>
+<
+textarea
+id
+=
+"
+ta
+"
+rows
+=
+"
+10
+"
+cols
+=
+"
+10
+"
+>
+test
 <
 /
 textarea
