Bug 577096 - App Tabs should indicate change of state in <title>. r=gavin ui-r=beltzner
UltraBlame original commit: a9648cc0b2c6e92132954d730d96fa4c5503aefd

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -11026,6 +11026,44 @@ chrome
 inactive
 ;
 }
+.
+tabbrowser
+-
+tab
+[
+pinned
+]
+[
+titlechanged
+]
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
+{
+background
+-
+color
+:
+rgba
+(
+255
+0
+0
+.
+5
+)
+!
+important
+;
+}
 #
 tabbrowser
 -
