--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -9113,6 +9113,50 @@ start
 ;
 }
 .
+tabbrowser
+-
+tab
+[
+pinned
+]
+[
+titlechanged
+]
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
+{
+-
+moz
+-
+box
+-
+shadow
+:
+0
+0
+0
+1em
+rgba
+(
+255
+0
+0
+.
+5
+)
+inset
+;
+}
+.
 tab
 -
 icon
