--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -9678,6 +9678,60 @@ tabbrowser
 -
 tab
 [
+pinned
+]
+[
+titlechanged
+]
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+rgba
+(
+255
+0
+0
+.
+5
+)
+rgba
+(
+255
+0
+0
+.
+5
+)
+)
+!
+important
+;
+}
+.
+tabbrowser
+-
+tab
+[
 busy
 ]
 >
