Bug 573536: add 'Learn more' link to geolocation notifications, r=gavin, a=blocking
UltraBlame original commit: ba1849f86ade7eb01563f67cc1c28fec9e7b5b46

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -2375,3 +2375,35 @@ moz
 box
 ;
 }
+#
+geolocation
+-
+notification
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+urlbarBindings
+.
+xml
+#
+geolocation
+-
+notification
+"
+)
+;
+}
