--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -7906,6 +7906,29 @@ png
 )
 ;
 }
+.
+geolocation
+-
+text
+-
+link
+{
+-
+moz
+-
+padding
+-
+start
+:
+13px
+;
+padding
+-
+top
+:
+10px
+;
+}
 #
 addons
 -
