--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -14378,6 +14378,11 @@ notification
 -
 popup
 {
+color
+:
+#
+fff
+;
 margin
 -
 top
@@ -14500,6 +14505,19 @@ png
 )
 ;
 }
+.
+geolocation
+-
+text
+-
+link
+{
+color
+:
+#
+fff
+;
+}
 #
 addons
 -
@@ -14531,19 +14549,6 @@ extensionGeneric
 .
 png
 )
-;
-}
-.
-popup
--
-notification
--
-description
-{
-color
-:
-#
-fff
 ;
 }
 .
