Back out bug 240933 and bug 590554 because of reftest failure on Win7 and also bug 593211
UltraBlame original commit: 4235cd33ad433012678d87ca668203b67c48ad57

--- a/layout/generic/test/test_movement_by_characters.html
+++ b/layout/generic/test/test_movement_by_characters.html
@@ -664,15 +664,20 @@ firstChild
 /
 at
 the
+'
+bb
+'
+but
+HINTLEFT
+so
+appears
+at
+the
 end
 of
 the
 first
 line
-before
-the
-\
-n
 testRight
 (
 editor
@@ -680,7 +685,7 @@ editor
 firstChild
 .
 firstChild
-2
+3
 )
 ;
 testRight
@@ -717,15 +722,20 @@ firstChild
 /
 at
 the
+'
+bb
+'
+but
+HINTLEFT
+so
+appears
+at
+the
 end
 of
 the
 first
 line
-before
-the
-\
-n
 testLeft
 (
 editor
@@ -733,7 +743,7 @@ editor
 firstChild
 .
 firstChild
-2
+3
 )
 ;
 testLeft
