--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -793,6 +793,151 @@ display
 none
 ;
 }
+#
+wrapper
+-
+urlbar
+-
+container
+#
+urlbar
+-
+container
+>
+#
+urlbar
+>
+toolbarbutton
+#
+urlbar
+-
+container
+:
+not
+(
+[
+combined
+]
+)
+>
+#
+urlbar
+>
+toolbarbutton
+#
+urlbar
+-
+container
+[
+combined
+]
++
+#
+reload
+-
+button
++
+#
+stop
+-
+button
+#
+urlbar
+-
+container
+[
+combined
+]
++
+#
+reload
+-
+button
+toolbar
+:
+not
+(
+[
+mode
+=
+"
+icons
+"
+]
+)
+>
+#
+urlbar
+-
+container
+>
+#
+urlbar
+>
+toolbarbutton
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+>
+#
+urlbar
+-
+container
+>
+#
+urlbar
+>
+#
+urlbar
+-
+reload
+-
+button
+:
+not
+(
+[
+displaystop
+]
+)
++
+#
+urlbar
+-
+stop
+-
+button
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+>
+#
+urlbar
+-
+container
+>
+#
+urlbar
+>
+#
+urlbar
+-
+reload
+-
+button
+[
+displaystop
+]
 toolbar
 [
 mode
@@ -1280,6 +1425,26 @@ rtl
 }
 #
 urlbar
+-
+container
+[
+combined
+]
+>
+#
+urlbar
+>
+#
+urlbar
+-
+icons
+>
+#
+go
+-
+button
+#
+urlbar
 [
 pageproxystate
 =
@@ -1321,6 +1486,67 @@ urlbar
 icons
 >
 #
+go
+-
+button
+#
+urlbar
+[
+pageproxystate
+=
+"
+invalid
+"
+]
+[
+focused
+=
+"
+true
+"
+]
+>
+#
+urlbar
+-
+go
+-
+button
+~
+toolbarbutton
+#
+urlbar
+[
+pageproxystate
+=
+"
+valid
+"
+]
+>
+#
+urlbar
+-
+go
+-
+button
+#
+urlbar
+:
+not
+(
+[
+focused
+=
+"
+true
+"
+]
+)
+>
+#
+urlbar
+-
 go
 -
 button
