Bug 593262. The stop/reload button is chasing me. Keep running from it. r=roc a=fix a test
UltraBlame original commit: 4b879b793eb6e3ce103793c2ef25fa03dad3b690

--- a/layout/style/test/chrome/hover_helper.html
+++ b/layout/style/test/chrome/hover_helper.html
@@ -32,56 +32,13 @@ javascript
 src
 =
 "
+chrome
+:
 /
-MochiKit
 /
-packed
-.
-js
-"
->
-<
+mochikit
 /
-script
->
-<
-script
-type
-=
-"
-application
-/
-javascript
-"
-src
-=
-"
-/
-tests
-/
-SimpleTest
-/
-SimpleTest
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-type
-=
-"
-application
-/
-javascript
-"
-src
-=
-"
+content
 /
 tests
 /
@@ -95,34 +52,6 @@ js
 <
 /
 script
->
-<
-link
-rel
-=
-"
-stylesheet
-"
-type
-=
-"
-text
-/
-css
-"
-href
-=
-"
-/
-tests
-/
-SimpleTest
-/
-test
-.
-css
-"
-/
 >
 <
 style
@@ -483,6 +412,8 @@ import
 window
 .
 opener
+.
+wrappedJSObject
 [
 import
 ]
@@ -614,50 +545,47 @@ setResize
 str
 )
 {
+var
+handler
+=
+function
+(
+)
+{
 iframe
 .
-contentDocument
+contentWindow
 .
-body
-.
-setAttribute
+removeEventListener
 (
 "
-onresize
+resize
 "
-"
-document
+arguments
 .
-body
-.
-setAttribute
-(
-'
-onresize
-'
-'
-void
-(
-0
-)
-'
+callee
+false
 )
 ;
-"
-+
-"
 setTimeout
 (
-'
-"
-+
 str
-+
-"
-'
 100
 )
+;
+}
+;
+iframe
+.
+contentWindow
+.
+addEventListener
+(
 "
+resize
+"
+handler
+false
 )
 ;
 }
@@ -937,11 +865,10 @@ Bug
 setResize
 (
 "
-parent
-.
 step2
 (
 )
+;
 "
 )
 ;
@@ -1077,8 +1004,6 @@ width
 setResize
 (
 "
-parent
-.
 step3
 (
 )
@@ -1208,8 +1133,6 @@ apply
 setResize
 (
 "
-parent
-.
 step4
 (
 )
@@ -1340,8 +1263,6 @@ true
 setResize
 (
 "
-parent
-.
 step6
 (
 )
@@ -1409,8 +1330,6 @@ apply
 setResize
 (
 "
-parent
-.
 step7
 (
 )
@@ -1519,8 +1438,6 @@ applies
 setResize
 (
 "
-parent
-.
 step8
 (
 )
@@ -1697,8 +1614,6 @@ scrollLeft
 setResize
 (
 "
-parent
-.
 step10
 (
 )
@@ -1778,8 +1693,6 @@ applies
 setResize
 (
 "
-parent
-.
 step11
 (
 )
@@ -1891,8 +1804,6 @@ apply
 setResize
 (
 "
-parent
-.
 step12
 (
 )
@@ -2023,8 +1934,6 @@ true
 setResize
 (
 "
-parent
-.
 step14
 (
 )
@@ -2098,8 +2007,6 @@ apply
 setResize
 (
 "
-parent
-.
 step15
 (
 )
@@ -2214,8 +2121,6 @@ applies
 setResize
 (
 "
-parent
-.
 step16
 (
 )
