Bug 581076 - No "See all results" link present when searching for add-ons and not all are displayed (extensions.getAddons.maxResults). r=dtownsend, a=blocking-beta6
UltraBlame original commit: 164c156307c7aee314df17be3d0e253a56aed02d

--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -3062,6 +3062,26 @@ none
 ;
 }
 #
+search
+-
+allresults
+-
+link
+{
+margin
+-
+top
+:
+1em
+;
+margin
+-
+bottom
+:
+2em
+;
+}
+#
 detail
 -
 view
