--- a/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
@@ -3010,6 +3010,26 @@ none
 ;
 }
 #
+search
+-
+allresults
+-
+link
+{
+margin
+-
+top
+:
+1em
+;
+margin
+-
+bottom
+:
+2em
+;
+}
+#
 detail
 -
 view
