Bug 593570 - reduce the tab close button's impact on the tab height. r+a=gavin
UltraBlame original commit: 47724f6fd67d5f0bb1cc380e36c220d94ea620f2

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -10122,7 +10122,7 @@ min
 -
 height
 :
-27px
+25px
 ;
 }
 .
@@ -10721,7 +10721,7 @@ min
 -
 height
 :
-20px
+18px
 ;
 }
 .
@@ -11563,6 +11563,30 @@ size
 menu
 "
 )
+;
+margin
+-
+top
+:
+-
+1px
+;
+margin
+-
+bottom
+:
+-
+1px
+;
+-
+moz
+-
+margin
+-
+end
+:
+-
+1px
 ;
 }
 .
