--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -485,6 +485,251 @@ disabled
 )
 ;
 }
+.
+global
+-
+warning
+{
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+margin
+:
+0
+8px
+;
+color
+:
+#
+916D15
+;
+text
+-
+shadow
+:
+#
+FFFFFF
+1px
+1px
+1px
+;
+font
+-
+weight
+:
+bold
+;
+}
+#
+addons
+-
+page
+[
+warning
+]
+.
+global
+-
+warning
+-
+container
+{
+background
+-
+color
+:
+rgba
+(
+255
+255
+0
+0
+.
+1
+)
+;
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+extensions
+/
+warning
+-
+stripes
+.
+png
+"
+)
+;
+background
+-
+repeat
+:
+repeat
+-
+x
+;
+}
+.
+warning
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+warning
+-
+16
+.
+png
+"
+)
+;
+width
+:
+16px
+;
+height
+:
+16px
+;
+margin
+:
+3px
+0
+;
+}
+.
+error
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+error
+-
+16
+.
+png
+"
+)
+;
+width
+:
+16px
+;
+height
+:
+16px
+;
+margin
+:
+3px
+0
+;
+}
+.
+pending
+-
+icon
+.
+info
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+information
+-
+16
+.
+png
+"
+)
+;
+width
+:
+16px
+;
+height
+:
+16px
+;
+margin
+:
+3px
+0
+;
+}
 #
 categories
 {
@@ -2244,148 +2489,6 @@ color
 ;
 }
 .
-warning
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-warning
--
-16
-.
-png
-"
-)
-;
-width
-:
-16px
-;
-height
-:
-16px
-;
-margin
-:
-3px
-0
-;
-}
-.
-error
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-error
--
-16
-.
-png
-"
-)
-;
-width
-:
-16px
-;
-height
-:
-16px
-;
-margin
-:
-3px
-0
-;
-}
-.
-pending
--
-icon
-.
-info
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-information
--
-16
-.
-png
-"
-)
-;
-width
-:
-16px
-;
-height
-:
-16px
-;
-margin
-:
-3px
-0
-;
-}
-.
 addon
 -
 view
@@ -3106,7 +3209,6 @@ opacity
 detail
 -
 view
->
 .
 loading
 {
@@ -3126,7 +3228,6 @@ not
 loading
 ]
 )
->
 .
 loading
 {
@@ -3144,7 +3245,6 @@ loading
 -
 extended
 ]
->
 .
 loading
 {
@@ -3193,7 +3293,6 @@ duration
 detail
 -
 view
->
 .
 loading
 >
