Bug 584006 - Drop non-native style for the Add-ons manager utilities button. r=bmcbride a=blocking
UltraBlame original commit: b07b23448a2d28f77ba79461be8b81d2a6fcbc45

--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -1612,13 +1612,6 @@ utils
 -
 btn
 {
--
-moz
--
-appearance
-:
-none
-;
 min
 -
 width
@@ -1627,86 +1620,18 @@ width
 .
 5em
 ;
-border
--
-width
-:
-1px
-;
--
-moz
--
-border
--
-top
--
-colors
-:
+}
 #
-999
-;
+header
 -
-moz
+utils
 -
-border
+btn
+.
+button
 -
-bottom
--
-colors
-:
-#
-999
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-#
-999
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-#
-999
-;
--
-moz
--
-border
--
-radius
-:
-8px
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-#
-FFF
-#
-BBB
-)
-;
+icon
+{
 list
 -
 style
@@ -1731,106 +1656,6 @@ utilities
 png
 "
 )
-;
-}
-#
-header
--
-utils
--
-btn
-:
-hover
-#
-header
--
-utils
--
-btn
-[
-open
-=
-"
-true
-"
-]
-{
--
-moz
--
-border
--
-top
--
-colors
-:
-#
-777
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-#
-777
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-#
-777
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-#
-777
-;
-}
-#
-header
--
-utils
--
-btn
-[
-open
-=
-"
-true
-"
-]
-{
--
-moz
--
-box
--
-shadow
-:
-inset
-3px
-3px
-8px
-#
-555
 ;
 }
 #
